indexd_ffi/examples/python/indexdFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
typedef struct ForeignBytes
{
    int32_t len;
    const uint8_t *_Nullable data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
void*_Nonnull uniffi_indexd_fn_clone_app(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_indexd_fn_free_app(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_indexd_fn_constructor_app_new(RustBuffer url, RustBuffer name, RustBuffer app_seed, RustBuffer description, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_indexd_fn_method_app_connect(void*_Nonnull ptr
);
uint64_t uniffi_indexd_fn_method_app_upload(void*_Nonnull ptr, RustBuffer encryption_key, uint8_t data_shards, uint8_t parity_shards
);
void*_Nonnull uniffi_indexd_fn_clone_chunkedbuffer(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_indexd_fn_free_chunkedbuffer(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_indexd_fn_constructor_chunkedbuffer_new(RustCallStatus *_Nonnull out_status
    
);
void uniffi_indexd_fn_method_chunkedbuffer_close(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_indexd_fn_method_chunkedbuffer_push_chunk(void*_Nonnull ptr, RustBuffer chunk
);
void*_Nonnull uniffi_indexd_fn_clone_upload(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_indexd_fn_free_upload(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_indexd_fn_method_upload_finish(void*_Nonnull ptr
);
uint64_t uniffi_indexd_fn_method_upload_write(void*_Nonnull ptr, RustBuffer buf
);
RustBuffer ffi_indexd_rustbuffer_alloc(uint64_t size, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_indexd_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *_Nonnull out_status
);
void ffi_indexd_rustbuffer_free(RustBuffer buf, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_indexd_rustbuffer_reserve(RustBuffer buf, uint64_t additional, RustCallStatus *_Nonnull out_status
);
void ffi_indexd_rust_future_poll_u8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_indexd_rust_future_cancel_u8(uint64_t handle
);
void ffi_indexd_rust_future_free_u8(uint64_t handle
);
uint8_t ffi_indexd_rust_future_complete_u8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_indexd_rust_future_poll_i8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_indexd_rust_future_cancel_i8(uint64_t handle
);
void ffi_indexd_rust_future_free_i8(uint64_t handle
);
int8_t ffi_indexd_rust_future_complete_i8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_indexd_rust_future_poll_u16(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_indexd_rust_future_cancel_u16(uint64_t handle
);
void ffi_indexd_rust_future_free_u16(uint64_t handle
);